--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
 
       <section id="transaction">
-        <h2 class="sr-only">Transações</h2>
+        <h2 onclick="Modal.open()" class="sr-only">Transações</h2>
 
         <a href="#" class="button new">+ Nova Transação</a>
 
@@ -92,7 +92,7 @@
       </section>
     </main>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
@@ -140,7 +140,18 @@
         </div>
       </div>
     </div>
-
     <footer><p>dev.finance$</p></footer>
+    <script>
+      const Modal = {
+        open() {
+          //abrir o modal, colocar  active
+          document.querySelector(".modal-overlay").classList.add("active");
+        },
+
+        close() {
+          //fechar o modal, tirar active
+        },
+      };
+    </script>
   </body>
 </html>
