--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span>Entradas</span>
             <img src="./assets/income.svg" alt="Imagem de entradas" />
           </h3>
-          <p id="incomeDisplay">R$ 5.000,00</p>
+          <p id="incomeDisplay">R$ 0,00</p>
         </div>
 
         <div class="card">
@@ -34,7 +34,7 @@
             <span>Saídas</span>
             <img src="./assets/expense.svg" alt="Image de Saídas" />
           </h3>
-          <p id="expenseDisplay">R$ 2.000,00</p>
+          <p id="expenseDisplay">R$ 0,00</p>
         </div>
 
         <div class="card total">
@@ -42,7 +42,7 @@
             <span>Total</span>
             <img src="assets/total.svg" alt="Image do total" />
           </h3>
-          <p id="totalDisplay">R$ 3.000,00</p>
+          <p id="totalDisplay">R$ 0,00/p></p>
         </div>
       </section>
 
@@ -71,7 +71,7 @@
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
-          <form action="">
+          <form action="" onsubmit="Form.submit(event)">
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
               <input
